--- a/Project03/project03.Rmd
+++ b/Project03/project03.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Project 03"
-author: "Your Name"
+author: "Zoe Chow, Jacqueline Caldwell"
 date: "`r format(Sys.time(), '%Y%m%d')`"
 output:
   github_document:
@@ -26,7 +26,8 @@ This is a very minor portion of the project and is best used for checking your w
 that you are about to install to work, don't worry. At a bare minimum, you only need `numpy` to complete this project.
 
 ```{r, install_seqlogo}
-reticulate::conda_install(packages=c('pdf2svg',"seqlogo"), forge=TRUE, channel="bioconda",conda="auto", additional_install_args="--solver=libmamba")
+#reticulate::conda_install(packages=c('pdf2svg',"seqlogo"), forge=TRUE, channel="bioconda",conda="auto", additional_install_args="--solver=libmamba")
+reticulate::conda_install(packages=c("numpy","seqlogo"), forge=TRUE, channel="bioconda",conda="auto", additional_install_args="--solver=libmamba")
 ```
 
 
@@ -66,6 +67,23 @@ GibbsMotifFinder(DNA, k-length)
         PWM ← PWM constructed from all Motifs except for Motifi
         Motifi ← select position m from PWM-scored k-mers in DNAi in probabilistic fashion from score distribution
     return PFM
+
+First draft of discussions:
+GibbsMotifFinder(DNA, k-length) DNA - list of strings?, k-length = 10 initially
+1. random pick of k-length seq from each line of DNA(seq) as motifs.
+    from list of sequences --> pick a motif from each of them. will create (list pos_motif[250])
+
+    2. for j  1 to 10000 or motifs stop changing (IC doesn't change or j==10000)
+      3. i comes from Random(N) where N is number of DNA(seq) (250 - pick a # motif index)
+        motif= DNA[i]
+      4. PWM constructed from all other 249 promoters (Background???). PWM(PFM("DNA-motif sequence")) 4 x 249 matrix => matrix 4xk-mer long.
+      5. Create the second for loop within 5; sliding window of k-mer bp over our 50bp
+          recalculate for each - k-mer scores length of matrix (matrix 4 x k-mer)
+          (saved k-mer with the highest score).
+      6.
+      recalculate PFM (4 x 10 matrix)
+      7. calculate IC of PFM ()
+      stop loop (2) if IC is the same x 100 or we've gotten to loop 10000
 ```
 
 Probability of chosing position $m = \frac{A_{m}}{\sum_{l}A_{l}}$ for positions $l$ in DNAi
