--- a/Project03/project03.Rmd
+++ b/Project03/project03.Rmd
@@ -84,6 +84,58 @@ GibbsMotifFinder(DNA, k-length) DNA - list of strings?, k-length = 10 initially
       recalculate PFM (4 x 10 matrix)
       7. calculate IC of PFM ()
       stop loop (2) if IC is the same x 100 or we've gotten to loop 10000
+
+Second draft of discussions/pseudocode:
+GibbsMotifFinder(DNA, k-length) DNA - list of strings?, k-length = 10 initially
+
+Seqs[]=DNA[]
+background set of strings k-length -1 
+poss_motif[]
+N – random index into motif/DNA
+
+create list of poss_motifs (based on seqs) (one random from each seqs[])
+     splitter to create motifs
+    
+j=counter_ic=0
+     
+loop (j==10000 or counter_ic == 100)
+    N = randomly pick one poss_motif
+
+    new_seq = seqs[N]
+
+    create new_set of seqs that doesn’t contain the seqs[N] that the poss_motif[N] is associated with.
+        background = seqs[-N]
+           
+    Calculate PWM(PFM(new_set))
+     
+    old k_mer = old_ic = 0
+
+    Create the second for loop within 
+     for in in length(new_seq-k)
+       # sliding window of k-mer bp over our 50bp
+           k_motif = new_seq[i:i+k]
+           new_k-mer_score = score_k-mer(seq, PWM)
+        
+    	if (new_kmer > than old_kmer)
+                old_kmer = new_kmer
+                motif = kMotif
+       pfm=build_pfm(motif)
+       new_ic = pfm_ic(pfm)   (need to start the counter_ic = 0) 
+ 
+       if (fuzzy_diff (new_ic,old_ic))
+	update old_ic = new_ic
+            counter_ic = 0
+        else
+             counter_ic+=1
+        j+=1
+   returning (pfm)
+         
+def fuzzy_diff(x,y)
+{
+  return(abs(x-y)) > 0.000001
+}
+ 
+
 ```
 
 Probability of chosing position $m = \frac{A_{m}}{\sum_{l}A_{l}}$ for positions $l$ in DNAi
@@ -95,6 +147,26 @@ Probability of chosing position $m = \frac{A_{m}}{\sum_{l}A_{l}}$ for positions 
 
 
 ```{python}
+def fuzzy_diff(x,y):
+  '''
+  Compares x and y within epsilon difference, and returns true or false
+  '''
+
+  epislon = 0.000001
+  if (abs(x-y) > epsilon):
+    return(TRUE)
+  else:
+    return(FALSE)
+  
+def create_possible_motif(seq,k=10):
+  '''
+  Create a k-length motif from a larger sequence, using random selection
+  '''
+
+  N = np.random.choice(len(seq),1)
+  return (seq[N:N+10])
+
+
 def GibbsMotifFinder (seqs, k, seed=42):
     '''
     Function to find a pfm from a list of strings using a Gibbs sampler
@@ -108,7 +180,53 @@ def GibbsMotifFinder (seqs, k, seed=42):
         pfm (numpy array): dimensions are 4xlength
         
     '''
-    pass
+  len_seq = len(seq)
+  background = [] # will be length(seq)-1
+  poss_motif = [] 
+ 
+  for seq in seqs:
+    poss_motif.append(create_possible_motif(seq,k))
+    
+  j=counter_ic=0
+  
+  while ((j!=10000) or (counter_ic!=100)):
+    
+    N = random.randrange(0,len_seq)
+    new_seq = seqs[N]
+
+# create new_set of seqs that doesn’t contain the seqs[N] that the poss_motif[N] is associated with.
+    
+    background = seqs.pop(N)
+           
+    bgPWM = build_PWM(build_PFM(background,k))
+     
+    old_kmer = old_ic = 0
+    
+    list_of_motifs=[]
+    scores_of_motifs=[]
+
+    # Create the second for loop within 
+    for i in (len(new_seq)-k):
+      # sliding window of k-mer bp over our 50bp
+      k_motif = new_seq[i:i+k]
+      list_of_motifs.append(k_motif)
+      new_kmer = score_kmer(k_motif, bgPWM)
+      scores_of_motifs.append(new_kmer)  
+    
+    best_index = scores_of_motifs.index(max(scores_of_motifs))  
+    
+    motif = list_of_motifs[best_index]
+    
+    pfm = build_pfm(motif,k)
+    new_ic = pfm_ic(pfm) 
+
+    if (fuzzy_diff (new_ic,old_ic)):
+	    old_ic = new_ic
+      counter_ic = 0
+    else:
+      counter_ic+=1
+    j+=1
+return (pfm)
 ```
 
 
