--- a/Project03/project03.Rmd
+++ b/Project03/project03.Rmd
@@ -27,12 +27,12 @@ that you are about to install to work, don't worry. At a bare minimum, you only 
 
 ```{r, install_seqlogo}
 #reticulate::conda_install(packages=c('pdf2svg',"seqlogo"), forge=TRUE, channel="bioconda",conda="auto", additional_install_args="--solver=libmamba")
-#reticulate::conda_install(packages=c("numpy","seqlogo"), forge=TRUE, channel="bioconda",conda="auto", additional_install_args="--solver=libmamba")
+reticulate::conda_install(packages=c("seqlogo"), forge=TRUE, channel="bioconda",conda="auto", additional_install_args="--solver=libmamba")
 ```
 
 
-```{python}
-import numpy as np
+```{python LoadPackages}
+import random
 import seqlogo
 
 #import function for building sequence motif & idenfitying seqs matching to motif
@@ -73,188 +73,116 @@ GibbsMotifFinder(DNA, k-length)
         PWM ← PWM constructed from all Motifs except for Motifi
         Motifi ← select position m from PWM-scored k-mers in DNAi in probabilistic fashion from score distribution
     return PFM
-
-First draft of discussions:
-GibbsMotifFinder(DNA, k-length) DNA - list of strings?, k-length = 10 initially
-1. random pick of k-length seq from each line of DNA(seq) as motifs.
-    from list of sequences --> pick a motif from each of them. will create (list pos_motif[250])
-
-    2. for j  1 to 10000 or motifs stop changing (IC doesn't change or j==10000)
-      3. i comes from Random(N) where N is number of DNA(seq) (250 - pick a # motif index)
-        motif= DNA[i]
-      4. PWM constructed from all other 249 promoters (Background???). PWM(PFM("DNA-motif sequence")) 4 x 249 matrix => matrix 4xk-mer long.
-      5. Create the second for loop within 5; sliding window of k-mer bp over our 50bp
-          recalculate for each - k-mer scores length of matrix (matrix 4 x k-mer)
-          (saved k-mer with the highest score).
-      6.
-      recalculate PFM (4 x 10 matrix)
-      7. calculate IC of PFM ()
-      stop loop (2) if IC is the same x 100 or we've gotten to loop 10000
-
-Second draft of discussions/pseudocode:
-GibbsMotifFinder(DNA, k-length) DNA - list of strings?, k-length = 10 initially
-
-Seqs[]=DNA[]
-background set of strings k-length -1 
-poss_motif[]
-N – random index into motif/DNA
-
-create list of poss_motifs (based on seqs) (one random from each seqs[])
-     splitter to create motifs
-    
-j=counter_ic=0
-     
-loop (j==10000 or counter_ic == 100)
-    N = randomly pick one poss_motif
-
-    new_seq = seqs[N]
-
-    create new_set of seqs that doesn’t contain the seqs[N] that the poss_motif[N] is associated with.
-        background = seqs[-N]
-           
-    Calculate PWM(PFM(new_set))
-     
-    old k_mer = old_ic = 0
-
-    Create the second for loop within 
-     for in in length(new_seq-k)
-       # sliding window of k-mer bp over our 50bp
-           k_motif = new_seq[i:i+k]
-           new_k-mer_score = score_k-mer(seq, PWM)
-        
-    	if (new_kmer > than old_kmer)
-                old_kmer = new_kmer
-                motif = kMotif
-       pfm=build_pfm(motif)
-       new_ic = pfm_ic(pfm)   (need to start the counter_ic = 0) 
- 
-       if (fuzzy_diff (new_ic,old_ic))
-	update old_ic = new_ic
-            counter_ic = 0
-        else
-             counter_ic+=1
-        j+=1
-   returning (pfm)
-         
-def fuzzy_diff(x,y)
-{
-  return(abs(x-y)) > 0.000001
-}
 ```
-```{python}
-import numpy as np
 
+```{python fuzzy_diff}
 #Support functions for GibbsMotifFinder()
 
 def fuzzy_diff(x, y, epsilon):
-     """
-     Compares x and y within epsilon difference, and returns true or false
-  
-     Args:
-     x,y (floats):  values to be compared, are they within epislon of each other if so 
-        function returns TRUE, otherwise, returns FALSE
-     epsilon (float) - the amount of difference, or tolerance between X & Y that we will allow
-  
-     Returns (boolean): if abs(x-y) os greater than epislon
-     """
-     
-     if (abs(x-y) > epsilon):
-          return(TRUE)
-     else:
-          return(FALSE)
-  
-  
-def create_possible_motif(sequence, k=10):
-     """
-     Create a k-length motif from a larger sequence, using random selection
- 
-     Args:
-     sequence (string):   single sequence to find a random motif in
-     k (int):        length of proposed motif
-    
-     Returns:
-     string of length k: containing motif 
-     """
-     
-     high_val = len(sequence) - 10 # don't want to go beyond the end of the string
-     print("ERR:  Need to fix the following line returning Syntax Indentation error here")
-     N=0
-#     N = np.random.random_integers(low=0, high=high_value, 1)
-     return (sequence[N:N+10])
-
-```
-
-
-```{python}
-def GibbsMotifFinder (seqs, k, seed=42):
-     """
-    Function to find a pfm from a list of strings using a Gibbs sampler
-    
-    Args: 
-        seqs (str list): a list of sequences, not necessarily in same lengths
-        k (int): the length of motif to find
-        seed (int, default=42): seed for np.random
-
-    Returns:
-        pfm (numpy array): dimensions are 4xlength
-        
     """
-     len_seq = len(seq)
-     background = [] # will be length(seq)-1
-     poss_motif = [] 
- 
-     for seq in seqs:
-          poss_motif.append(create_possible_motif(seq,k))
-    
-     j = counter_ic = 0
+    Compares x and y within epsilon difference, and returns true or false
   
-     while ((j != 10000) or (counter_ic != 100)):
-          print("ERR: Need to fix the np.random... line below this in code, syntax error, commented out, remove N=0")
-          N = 5
-#          N = np.random.integers(0,len_seq,seed)
-          new_seq = seqs[N]
-
-# create new_set of seqs that doesn’t contain the seqs[N] that the poss_motif[N] is associated with.
+    Args:
+      x,y (floats):  values to be compared, are they within epislon of each other if so function returns TRUE, otherwise, returns FALSE
+    epsilon (float) - the amount of difference, or tolerance between X & Y that we will allow
     
-          print("ERR: Need to fix seqs.pop, syntax error, N name not found",N)
-#          background = seqs.pop(N)
-           
-          bgPWM = build_pwm(build_pfm(background,k))
-     
-          old_kmer = old_ic = 0
+    Returns (boolean): if abs(x-y) os greater than epislon
+    """
     
-          list_of_motifs=[]
-          scores_of_motifs=[]
-
-    # Create the second for loop within 
-          for i in (len(new_seq)-k):
-      # sliding window of k-mer bp over our 50bp
-               k_motif = new_seq[i:i+k]
-               list_of_motifs.append(k_motif)
-               new_kmer = score_kmer(k_motif, bgPWM)
-               scores_of_motifs.append(new_kmer)  
-    
-          best_index = scores_of_motifs.index(max(scores_of_motifs))  
-    
-          motif = list_of_motifs[best_index]
-    
-          pfm = build_pfm(motif,k)
-          new_ic = pfm_ic(pfm) 
-
-          if (fuzzy_diff (new_ic,old_ic,0.000001)):
-               old_ic = new_ic
-               counter_ic = 0
-          else:
-               counter_ic+=1
-    
-          j+=1
-  #end of while loop
-  
-     return (pfm)
+    if (abs(x-y) > epsilon):
+      return(1)
+    else:
+      return(0)
 ```
 
 
-```{python}
+```{python create_possible_motif}
+def create_possible_motif(sequence, k=10):
+    """
+    Create a k-length motif from a larger sequence, using random selection
+      
+    Args:
+      sequence (string):   single sequence to find a random motif in
+      k (int):        length of proposed motif
+        
+    Returns:
+      string of length k: containing motif 
+    """
+          
+          
+    N = random.randint(0, len(sequence)-k)
+    return (sequence[N:N+10])
+
+```
+
+
+```{python GibbsMotifFinder}
+def GibbsMotifFinder (seqs, k, seed=42):
+    """
+    Function to find a pfm from a list of strings using a Gibbs sampler
+  
+    Args: 
+      seqs (str list): a list of sequences, not necessarily in same lengths
+      k (int): the length of motif to find
+      seed (int, default=42): seed for np.random
+    
+    Returns:
+      pfm (numpy array): dimensions are 4xlength
+      
+    """
+    len_seq = len(seqs)
+    background = []  # will be length(seq)-1
+    poss_motif = []  # k-length of each seq
+    pfm = []
+      
+    for seq in seqs:
+      poss_motif.append(create_possible_motif(seq,k))
+    
+        
+    j = counter_ic = 0  # Set counter for j and IC
+    while ((j > 10000) or (counter_ic > 100)):
+
+      N = random.randint(0, len_seq-1) #works without giving an array
+
+      new_seq = seqs[N]
+      background = seqs[:N] + seqs[N+1:]
+      bgPWM = build_pwm(build_pfm(background,k))
+        
+          
+      list_of_motifs=[]
+      scores_of_motifs=[]
+      old_ic = 0
+        
+      # Create the second for loop within 
+      for i in range(len(new_seq)-k):  
+        # sliding window of k-mer bp over our 50bp
+        k_motif = new_seq[i:i+k]
+        list_of_motifs.append(k_motif)
+        new_kmer = score_kmer(k_motif, bgPWM)
+        scores_of_motifs.append(new_kmer)  
+            
+      best_index = scores_of_motifs.index(max(scores_of_motifs))  
+            
+      motif = list(list_of_motifs[best_index])
+            
+      pfm = build_pfm(motif,k)
+      new_ic = pfm_ic(pfm) 
+            
+      if (fuzzy_diff (new_ic,old_ic,0.000001)):
+        old_ic = new_ic
+        counter_ic = 0
+      else:
+        counter_ic+=1
+                
+      
+      j+=1
+        #end of while loop
+                
+    return (pfm)
+```
+
+
+```{python Driver}
 # Here we test your Gibbs sampler.
 # You do not need to edit this or the section below. This is the Driver program
 
