--- a/Project03/project03.Rmd
+++ b/Project03/project03.Rmd
@@ -90,7 +90,7 @@ def fuzzy_diff(x, y, epsilon):
     Returns (boolean): if abs(x-y) os greater than epislon
     """
     
-    if (abs(x-y) > epsilon):
+    if (abs(x-y) < epsilon):
       return(1)
     else:
       return(0)
@@ -117,6 +117,27 @@ def create_possible_motif(sequence, k=10):
 ```
 
 
+```{python}
+def choose_motif(motif_list, scores):
+  '''
+  function choose_motif takes a string of motif values and scores, and selects one in the list randomly, returning the index into the array given.  Scores should come from the calculations on the motif_list, so they need to be of the same length
+  
+  args:
+    motif_list (list of strings): list of motifs 
+    scores (list of floats):      list of information scores that are associated directly with the motifs in the prior array.
+  '''
+  if (motif_list):
+    if len(motif_list) == len(scores):
+      picked_item = random.choices(motif_list, weights=scores, k=1)[0]  
+      return(motif_list.index(picked_item))
+    else:
+      print(f"Error: choose_motif(): {motif_list}, {current_ic} are not the same length")
+  else:
+    print("Error: No list of motifs found")
+    return("")
+```
+
+
 ```{python GibbsMotifFinder}
 def GibbsMotifFinder (seqs, k, seed=42):
     """
@@ -133,63 +154,65 @@ def GibbsMotifFinder (seqs, k, seed=42):
     """
     len_seq = len(seqs)
     background = []  # will be length(seq)-1
-    poss_motif = []  # k-length of each seq
+    poss_motif = poss_motif_score = []  # k-length of each possible motif
     pfm = []
     old_ic = 0
       
     for seq in seqs:
       poss_motif.append(create_possible_motif(seq,k))
+      poss_motif_score.append(0) #initialize everyone to 0
     
-        
     j = counter_ic = 0  # Set counter for j and IC
     
-    while ((j < 1000) or (counter_ic < 10)): # REMEMBER to fix the if statement below 
+    while ((j < 1000) and (counter_ic < 10)): 
 
       N = random.randint(0, len_seq-1) #works without giving an array
 
       new_seq = seqs[N]
-      background = seqs[:N] + seqs[N+1:]
-      bgPWM = build_pwm(build_pfm(background,k))
-        
-      list_of_motifs=[]
-      scores_of_motifs=[]
-        
-      # Create the second for loop within 
+      
+      background = seqs[:N] + seqs[N+1:] # set of seqs that doesn't include new_seq
+      
+      bgPWM = build_pwm(build_pfm(background,k)) # create background PWM
+      
+      # NOTE:  DNAi arrays are local arrays only, they need to be reset each time you go through the big loop
       for i in range(len(new_seq)-k):  
         # sliding window of k-mer bp over our 50bp
-        k_motif = new_seq[i:i+k]
-        list_of_motifs.append(k_motif)
-        new_kmer = score_kmer(k_motif, bgPWM)
-        scores_of_motifs.append(new_kmer)  
+        k_motif = new_seq[i:i+k]        
+        if !(k_motif in poss_motif): # if it isn't in the list then add it, and add a new item to score as well
+          poss_motif.append(create_possible_motif(k_motif,k))
+          new_ic = pfm_ic(build_pfm(poss_motif,k))
+          poss_motif_score.append(new_ic)
+        else:
+          new_ic=pfm_ic(build_pfm(poss_motif,k)) # calc the new possible IC
+        #  temp_index = poss_motif.index(k_motif) # look up the motif in the big list
+        #  poss_motif_score[temp_index] = new_ic  #scores of motifs will match DNA(i) list/array
+        
+       # select position m from PWM-scored k-mers in DNAi in probabilistic fashion from score distribution
+      rand_index = choose_motif(poss_motif, poss_motif_score) # probabilistic motif selection
+      
+      pfm = build_pfm(poss_motif[rand_index],k)
+      
+      current_ic = pfm_ic(pfm)
             
-      best_index = scores_of_motifs.index(max(scores_of_motifs))  
-            
-      motif = list(list_of_motifs[best_index])
-            
-      pfm = build_pfm(motif,k)
-           
-      new_ic = pfm_ic(pfm) 
-
-            
-      if (fuzzy_diff (new_ic,old_ic,0.000001)):
-        old_ic = new_ic
+      # now check to see if the current_IC matches the one we did last time through the loop
+      if not (fuzzy_diff (current_ic,poss_motif_score[N],0.000001)):
+        # if they don't match, then re-set and start again with another motif
+        poss_motif_score[N] = current_ic
         counter_ic = 0
       else:
-        counter_ic+=1
+        # if they do match, then we have converged
+        return(np.array(pfm))
                 
+      counter_ic+=1
       j+=1
      
-      if ((counter_ic == 2) or (j==1000)):
-        print("the returned PFM is for {motif}:",motif)
-        return(np.array(pfm))
-      
-      #end of while loop
-                
-    print("before return:pfm",pfm)
-    return (pfm)
+      #end of while loop; if we have reached here, there was no convergence return the last motif checked
+    return (np.array(pfm))
 
 #Testing code
 promoter_pfm = GibbsMotifFinder(seqs,10)
+promoter_pfm
+
 ```
 
 
@@ -222,6 +245,7 @@ for name, seq in get_fasta(seq_file): # For each entry in our FASTA file
 ```{python}
 # Run the gibbs sampler:
 promoter_pfm = GibbsMotifFinder(seqs,10)
+
 
 # Plot the final pfm that is generated: 
 seqlogo.seqlogo(seqlogo.CompletePm(pfm = promoter_pfm.T))
