--- a/Project03/project03.Rmd
+++ b/Project03/project03.Rmd
@@ -12,6 +12,7 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo=TRUE)
 library('reticulate')
+reticulate::use_condaenv(condaenv = "r-reticulate")
 ```
 
 ---
@@ -26,14 +27,20 @@ This is a very minor portion of the project and is best used for checking your w
 that you are about to install to work, don't worry. At a bare minimum, you only need `numpy` to complete this project.
 
 ```{r, install_seqlogo}
-#reticulate::conda_install(packages=c('pdf2svg',"seqlogo"), forge=TRUE, channel="bioconda",conda="auto", additional_install_args="--solver=libmamba")
-reticulate::conda_install(packages=c("seqlogo"), forge=TRUE, channel="bioconda",conda="auto", additional_install_args="--solver=libmamba")
+reticulate::conda_install(
+  envname = "r-reticulate", 
+  packages=c("seqlogo", "pdf2svg", "setuptools"),
+  channel=c("bioconda", "conda-forge"), 
+  conda="auto", 
+  additionall_install_args="--solver=libmamba"
+)
 ```
 
 
 ```{python LoadPackages}
 import numpy as np
 import random
+import math
 import seqlogo
 
 #import function for building sequence motif & idenfitying seqs matching to motif
@@ -60,7 +67,7 @@ Assumptions:
 - Each sequence contains the motif
 
 
-Probability of chosing position $m = \frac{A_{m}}{\sum_{l}A_{l}}$ for positions $l$ in DNAi
+Probability of chosing position $m$ = \frac{A_{m}}{\sum_{l}A_{l}}$ for positions $l$ in DNAi
 
 
 **Note:** I have also added a function to `motif_ops.py` that will calculate the information content of your motifs. This is useful to observe the progression of your Gibbs sampler as well as a measure of convergence. You can use this function as `IC = pfm_ic(pfm)`. You should expect a slow increase of IC until it plateaus such as in the plot below from your lecture slides:   ![]('figures/Gibbs_Sampling.png')
@@ -91,9 +98,9 @@ def fuzzy_diff(x, y, epsilon):
     """
     
     if (abs(x-y) < epsilon):
-      return(1)
+      return(1) # basically the same!
     else:
-      return(0)
+      return(0) # not the same!
 ```
 
 
@@ -286,14 +293,9 @@ def GibbsMotifFinder (seqs, k, seed=42):
       #end of while loop; if we have reached here, there was no convergence return the last motif checked
     return (np.array(pfm))
 
-#Testing code
-promoter_pfm = GibbsMotifFinder(seqs,10)
-promoter_pfm
-
 ```
 
 ```{python V3}
-import math
 def GibbsMotifFinder (seqs, k, seed=42):
     """
     Function to find a pfm from a list of strings using a Gibbs sampler
@@ -353,7 +355,7 @@ def GibbsMotifFinder (seqs, k, seed=42):
         counter_ic += 1
       else:
         counter_ic = 0
-      print(f"J: {j}, PFM:{pfm} , Old IC: {old_ic}, Current IC: {current_ic}, IC Counter: {counter_ic}")
+     # print(f"J: {j}, PFM:{pfm} , Old IC: {old_ic}, Current IC: {current_ic}, IC Counter: {counter_ic}")
       
       old_ic = current_ic          
       j+=1
@@ -363,8 +365,8 @@ def GibbsMotifFinder (seqs, k, seed=42):
     return (np.array(pfm))
               
 #Testing code
-promoter_pfm = GibbsMotifFinder(seqs,10)
-promoter_pfm
+#promoter_pfm = GibbsMotifFinder(seqs,10)
+#promoter_pfm
 ```
 
 
@@ -394,9 +396,17 @@ for name, seq in get_fasta(seq_file): # For each entry in our FASTA file
 
 ```{python}
 # Run the gibbs sampler:
+
 promoter_pfm = GibbsMotifFinder(seqs,10)
 
-
 # Plot the final pfm that is generated: 
-seqlogo.seqlogo(seqlogo.CompletePm(pfm = promoter_pfm.T))
+seqlogo.seqlogo(
+    seqlogo.CompletePm(pfm = promoter_pfm.T), 
+    format='png' , 
+    filename = './stuff/motif.png'
+)
 ```
+Let's see the output now. You can either directly open the image or type in the
+filename below. This image would also be included if you were to `knit` this document.
+
+![](stuff/motif.png)
